@@ -1,11 +1,11 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.029
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
-requires "Feature::Compat::Try" => "0";
 requires "List::Util" => "0";
 requires "Plack::Middleware" => "0";
 requires "Ref::Util" => "0";
 requires "Time::HiRes" => "0";
+requires "Try::Tiny" => "0";
 requires "parent" => "0";
 requires "perl" => "v5.14.0";
 requires "warnings" => "0";
